2008-07-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs: Fix
	major performance issue I introduced within the last week.  With this and
	snorp and my earlier commits, BGO #541469 is fixed.

2008-07-25  James Willcox  <snorp@snorp.net>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs:
	Properly respond to TrackChanged events, and only fetch cover art
	if something changed that we care about.

2008-07-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	Schedule the cover art lookup job w/ the lowest priority.

2008-07-25  Aaron Bockover  <abock@gnome.org>

	* build/Makefile.am: Patch from Bertrand Lorentz to force UTF-8 local
	when extracting strings from po files to populate the translator
	credits (BGO #506556)

2008-07-24  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSource.cs:
	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSourceContents.cs:
	Temporary hack that provides a Genre browser for Internet Radio

	* src/Clients/Nereid/Nereid/PlayerInterface.cs: Support inherited
	source contents

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/ITrackModelSourceContents.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/CompositeTrackSourceContents.cs:
	Remove unnecessary interface API and disable the genre browser for now

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	Support forced positioning of the browser

2008-07-24  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Fix the 
	comparison between the field column and the current sort column, so that
	"CoreTracks.skippedcount" doesn't match "Track". Makes BGO #544415 less
	likely to happen, but doesn't fix it.

2008-07-24  Bertrand Lorentz  <bertrand.lorentz@gmail.com>
